--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -2,18 +2,20 @@
 	"name": "backend",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.js",
+	"main": "dist/index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "tsc",
 		"start": "node dist/index.js",
-		"dev": "concurrently \"tsc -w\" \"nodemon dist/index\""
+		"dev": "concurrently \"tsc -w\" \"nodemon dist/index.js\""
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@types/axios": "^0.14.0",
 		"@types/express": "^4.17.21",
+		"axios": "^1.7.4",
 		"concurrently": "^8.2.2",
 		"express": "^4.19.2",
 		"nodemon": "^3.1.4",
