--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -13,12 +13,24 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@prisma/client": "^5.18.0",
 		"@types/axios": "^0.14.0",
+		"@types/bcrypt": "^5.0.2",
 		"@types/express": "^4.17.21",
+		"@types/express-session": "^1.18.0",
+		"@types/jsonwebtoken": "^9.0.6",
+		"@types/nodemailer": "^6.4.15",
+		"@types/uuid": "^10.0.0",
 		"axios": "^1.7.4",
+		"bcrypt": "^5.1.1",
 		"concurrently": "^8.2.2",
 		"express": "^4.19.2",
+		"express-session": "^1.18.0",
+		"jsonwebtoken": "^9.0.2",
+		"nodemailer": "^6.9.14",
 		"nodemon": "^3.1.4",
-		"typescript": "^5.5.4"
+		"prisma": "^5.18.0",
+		"typescript": "^5.5.4",
+		"uuid": "^10.0.0"
 	}
 }
