export error resolved in common by replacing tsc with tsup

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -4,10 +4,13 @@
 	"description": "",
 	"main": "dist/index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"build": "tsup",
+		"dev": "tsup --watch",
+		"lint": "eslint src/",
+		"typecheck": "tsc --noEmit"
 	},
 	"exports": {
-		"./datatypes": "./datatypes/index.ts"
+		"./zod": "./src/index.ts"
 	},
 	"keywords": [],
 	"author": "",
