--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,13 +1,15 @@
 {
-	"name": "backend",
+	"name": "server",
 	"version": "1.0.0",
 	"description": "",
 	"main": "dist/index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "tsc",
 		"start": "node dist/index.js",
-		"dev": "concurrently \"tsc -w\" \"nodemon dist/index.js\""
+		"dev": "tsup --watch --onSuccess \"node dist/index.js\"",
+		"build": "tsup",
+		"clean": "rm -rf dist",
+		"typecheck": "tsc --noEmit",
+		"lint": "eslint src/"
 	},
 	"keywords": [],
 	"author": "",
@@ -23,14 +25,13 @@
 		"@types/uuid": "^10.0.0",
 		"axios": "^1.7.4",
 		"bcrypt": "^5.1.1",
-		"concurrently": "^8.2.2",
 		"express": "^4.19.2",
 		"express-session": "^1.18.0",
 		"jsonwebtoken": "^9.0.2",
 		"nodemailer": "^6.9.14",
 		"nodemon": "^3.1.4",
 		"prisma": "^5.18.0",
-		"typescript": "^5.5.4",
-		"uuid": "^10.0.0"
+		"tsup": "^8.2.4",
+		"typescript": "^5.5.4"
 	}
 }
