--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -18,6 +18,7 @@
 		"@prisma/client": "^5.18.0",
 		"@types/axios": "^0.14.0",
 		"@types/bcrypt": "^5.0.2",
+		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
 		"@types/express-session": "^1.18.0",
 		"@types/jsonwebtoken": "^9.0.6",
@@ -25,6 +26,7 @@
 		"@types/uuid": "^10.0.0",
 		"axios": "^1.7.4",
 		"bcrypt": "^5.1.1",
+		"cors": "^2.8.5",
 		"express": "^4.19.2",
 		"express-session": "^1.18.0",
 		"jsonwebtoken": "^9.0.2",
