--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "frontend",
+	"name": "client",
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"axios": "^1.7.4",
+		"dotenv": "^16.4.5",
 		"formik": "^2.4.6",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
