--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,18 @@
 {
 	"version": 2,
-	"projects": [
+	"builds": [
 		{
-			"src": "apps/client/",
+			"src": "apps/client/package.json",
 			"use": "@vercel/static-build",
 			"config": {
 				"distDir": "apps/client/public"
-			},
-			"buildCommand": "npm run build"
+			}
+		}
+	],
+	"routes": [
+		{
+			"src": "/(.*)",
+			"dest": "apps/client/public/$1"
 		}
 	]
 }
