problem submition route created

--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -1,9 +1,14 @@
-PORT=server_port
-DATABASE_URL=dtatbase_url
+PORT=8080
+DATABASE_URL=
 JWT_SECRET=
 BCRYPT_PEPPER=
+SESSION_SECRET=
 SMTP_PORT=465
 SMTP_HOST=smtp.gmail.com
-SMTP_USER=your_email
-SMTP_PASS=app_password_of_your_email
-SMTP_FROM=your_email
+SMTP_USER=codechamp.xyz@gmail.com
+SMTP_PASS=
+SMTP_FROM=codechamp.xyz@gmail.com
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=eu-north-1
+S3_BUCKET_NAME=code-champ-objects
