--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -15,6 +15,8 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@aws-sdk/client-s3": "^3.637.0",
+		"@aws-sdk/s3-request-presigner": "^3.637.0",
 		"@prisma/client": "^5.18.0",
 		"@types/axios": "^0.14.0",
 		"@types/bcrypt": "^5.0.2",
@@ -24,7 +26,6 @@
 		"@types/express-session": "^1.18.0",
 		"@types/jsonwebtoken": "^9.0.6",
 		"@types/nodemailer": "^6.4.15",
-		"@types/uuid": "^10.0.0",
 		"axios": "^1.7.4",
 		"bcrypt": "^5.1.1",
 		"cookie-parser": "^1.4.6",
