--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -10,14 +10,16 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@monaco-editor/react": "^4.6.0",
+		"@repo/common": "*",
+		"@types/prismjs": "^1.26.4",
 		"axios": "^1.7.4",
 		"formik": "^2.4.6",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-hot-toast": "^2.4.1",
 		"react-router-dom": "^6.26.1",
-		"zustand": "^4.5.5",
-		"@repo/common": "*"
+		"zustand": "^4.5.5"
 	},
 	"devDependencies": {
 		"@types/react": "^18.3.3",
