--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -11,30 +11,27 @@
 	},
 	"dependencies": {
 		"@monaco-editor/react": "^4.6.0",
-		"@repo/common": "*",
-		"@types/prismjs": "^1.26.4",
 		"axios": "^1.7.4",
 		"formik": "^2.4.6",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-hot-toast": "^2.4.1",
+		"react-icons": "^5.3.0",
 		"react-router-dom": "^6.26.1",
 		"zustand": "^4.5.5"
 	},
 	"devDependencies": {
-		"@types/react": "^18.3.3",
+		"@types/react": "^18.3.5",
 		"@types/react-dom": "^18.3.0",
-		"@typescript-eslint/eslint-plugin": "^7.15.0",
-		"@typescript-eslint/parser": "^7.15.0",
 		"@vitejs/plugin-react": "^4.3.1",
 		"autoprefixer": "^10.4.20",
 		"eslint": "^8.57.0",
 		"eslint-plugin-react-hooks": "^4.6.2",
-		"eslint-plugin-react-refresh": "^0.4.7",
+		"eslint-plugin-react-refresh": "^0.4.11",
 		"postcss": "^8.4.40",
 		"tailwindcss": "^3.4.7",
-		"typescript": "^5.2.2",
-		"vite": "^5.3.5"
+		"typescript": "^5.5.4",
+		"vite": "^5.4.3"
 	},
 	"overrides": {
 		"vite": {
