--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -4,9 +4,10 @@
 	"description": "",
 	"main": "dist/index.js",
 	"scripts": {
+		"postinstall": "npx prisma generate",
+		"build": "tsup",
 		"start": "node dist/index.js",
 		"dev": "tsup --watch --onSuccess \"node dist/index.js\"",
-		"build": "tsup",
 		"clean": "rm -rf dist",
 		"typecheck": "tsc --noEmit",
 		"lint": "eslint src/"
@@ -15,18 +16,16 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@aws-sdk/client-s3": "^3.637.0",
-		"@aws-sdk/s3-request-presigner": "^3.637.0",
+		"@aws-sdk/client-s3": "^3.645.0",
 		"@prisma/client": "^5.18.0",
-		"@types/axios": "^0.14.0",
 		"@types/bcrypt": "^5.0.2",
 		"@types/cookie-parser": "^1.4.7",
 		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
 		"@types/express-session": "^1.18.0",
 		"@types/jsonwebtoken": "^9.0.6",
-		"@types/nodemailer": "^6.4.15",
-		"axios": "^1.7.4",
+		"@types/morgan": "^1.9.9",
+		"axios": "^1.7.7",
 		"bcrypt": "^5.1.1",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
@@ -34,9 +33,10 @@
 		"express": "^4.19.2",
 		"express-session": "^1.18.0",
 		"jsonwebtoken": "^9.0.2",
-		"nodemailer": "^6.9.14",
+		"morgan": "^1.10.0",
+		"nodemailer": "^6.9.15",
 		"nodemon": "^3.1.4",
-		"prisma": "^5.18.0",
+		"prisma": "^5.19.1",
 		"tsup": "^8.2.4",
 		"typescript": "^5.5.4"
 	}
