--- a/apps/webhookHandler/package.json
+++ b/apps/webhookHandler/package.json
@@ -1,7 +1,9 @@
 {
-	"name": "submissionworker",
+	"name": "webhookhandler",
 	"version": "1.0.0",
+	"main": "dist/index",
 	"scripts": {
+		"postinstall": "prisma generate",
 		"build": "tsc",
 		"start": "node dist/index.js",
 		"dev": "concurrently \"tsc -w\" \"nodemon dist/index\""
@@ -11,17 +13,13 @@
 	"license": "ISC",
 	"description": "",
 	"dependencies": {
+		"@prisma/client": "^5.19.1",
+		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
-		"axios": "^1.7.7",
-		"cluster": "^0.7.7",
-		"concurrently": "^8.2.2",
-		"dotenv": "^16.4.5",
+		"concurrently": "^9.0.0",
+		"cors": "^2.8.5",
 		"express": "^4.20.0",
-		"redis": "^4.7.0",
-		"typescript": "^5.5.4",
-		"zod": "^3.23.8"
-	},
-	"devDependencies": {
-		"@types/node": "^22.5.3"
+		"prisma": "^5.19.1",
+		"typescript": "^5.6.2"
 	}
 }
