--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,15 @@
 {
     "version": 2,
+    "builds": [
+        {
+            "src": "apps/server/src/**/*.ts",
+            "use": "@vercel/node"
+        }
+    ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "apps/server/dist/index.js"
+            "dest": "apps/server/src/index.ts"
         }
     ]
 }
