--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "apps/server/dist/index.js"
+            "dest": "/dist/index.js"
         }
     ]
 }
