--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "apps/server/dist/index.js"
+            "dest": "/dist/index.js"
         }
     ]
 }
