--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,8 @@
     ],
     "routes": [
         {
-            "src": "/(.*)",
-            "dest": "/dist/index.js"
+            "src": "apps/server/(.*)",
+            "dest": "apps/server/dist/index.js"
         }
     ]
 }
