--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,11 @@
     "version": 2,
     "builds": [
         {
-            "src": "apps/server/package.json",
-            "use": "@vercel/node"
+            "src": "apps/server/dist/index.js",
+            "use": "@vercel/node",
+            "config": {
+                "distDir": "apps/server/dist"
+            }
         }
     ],
     "routes": [
