updated apps from its saparate repos

--- a/apps/submissionQueueHandler/package.json
+++ b/apps/submissionQueueHandler/package.json
@@ -12,17 +12,20 @@
 	"license": "ISC",
 	"description": "",
 	"devDependencies": {
+		"@types/bull": "^3.15.9",
 		"@types/express": "^4.17.21",
 		"@types/node": "^22.5.2"
 	},
 	"dependencies": {
 		"@types/uuid": "^10.0.0",
+		"bull": "^4.16.1",
 		"concurrently": "^8.2.2",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"redis": "^4.7.0",
 		"typescript": "^5.5.4",
 		"uuid": "^10.0.0",
+		"wait-on": "^8.0.0",
 		"zod": "^3.23.8"
 	}
 }
