--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -25,6 +25,8 @@
         "@types/express-session": "^1.18.0",
         "@types/jsonwebtoken": "^9.0.6",
         "@types/morgan": "^1.9.9",
+        "@types/passport": "^1.0.16",
+        "@types/passport-google-oauth20": "^2.0.16",
         "axios": "^1.7.7",
         "bcrypt": "^5.1.1",
         "cookie-parser": "^1.4.6",
@@ -32,10 +34,13 @@
         "dotenv": "^16.4.5",
         "express": "^5.0.0",
         "express-session": "^1.18.0",
+        "google-auth-library": "^9.14.2",
         "jsonwebtoken": "^9.0.2",
         "morgan": "^1.10.0",
         "nodemailer": "^6.9.15",
         "nodemon": "^3.1.4",
+        "passport": "^0.7.0",
+        "passport-google-oauth20": "^2.0.0",
         "prisma": "^5.19.1",
         "tsup": "^8.2.4",
         "typescript": "^5.5.4"
