--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -17,6 +17,7 @@
     "license": "ISC",
     "dependencies": {
         "@aws-sdk/client-s3": "^3.645.0",
+        "@aws-sdk/s3-request-presigner": "^3.679.0",
         "@prisma/client": "^5.18.0",
         "@types/bcrypt": "^5.0.2",
         "@types/cookie-parser": "^1.4.7",
