--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -13,6 +13,7 @@
 		"@monaco-editor/react": "^4.6.0",
 		"axios": "^1.7.4",
 		"formik": "^2.4.6",
+		"lucide-react": "^0.477.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-hot-toast": "^2.4.1",
